force-app/main/default/objects/Activity/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <description>Picklist to select how the interview will be conducted (e.g., in-person, video call, phone call).</description>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Pre-Recorded Video</fullName>
            </value>
            <value>
                <fullName>Online Assessment</fullName>
            </value>
            <value>
                <fullName>Onsite (Full Day)</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Chat-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>