force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <description>Picklist to select the stage or purpose of the interview (e.g., phone screen, technical interview, final interview).</description>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>Hiring Manager Interview</fullName>
            </value>
            <value>
                <fullName>Group Interview</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
            </value>
            <value>
                <fullName>Offer Discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>